@@ -3,6 +3,7 @@ Revision history for SPVM
 0.9116  2021-01-11
         [CHANGES]
         * ar file don't contains static link files.
+        * ar file don't contains SPVM module object file.
 
 0.9116  2021-01-11
         [FIX BUGS]
